# manifold-cli

./: LICENSE  README.md  manifold_cli.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_manifold_cli.py
